fixed spacing issue

--- a/app/assets/stylesheets/blog_posts.css.scss
+++ b/app/assets/stylesheets/blog_posts.css.scss
@@ -166,7 +166,7 @@ article.blog {
     display: block;
 
     &.small {
-      margin-top: 90px;
+      margin-top: 30px;
     }
 
     &.small * {
